# AVA

./: .cursorrules  .editorconfig  .env.example  .gitignore  .mcp.json  .npmrc  .oxlintrc.json  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_STRUCTURE.md  CONTRIBUTING.md  CONTRIBUTIONS.md  Cargo.toml  DOCS_PLAN.md  Justfile  LICENSE  MEMORY.md  PLAN.md  README.md  SECURITY.md  STRUCTURE_ANALYSIS.md  STRUCTURE_SUMMARY.txt  TREE_DIAGRAM.txt  _typos.toml  app-1420-snapshot.md  approval-after-submit.md  approval-probe.md  biome.json  clippy.toml  commitlint.config.js  current-app-deep.md  current-app-postinit.md  current-app.md  deny.toml  eslint.config.js  index.html  install-from-source.sh  (+18 more)
cpp/: CMakeLists.txt  CMakePresets.json  MILESTONE10_BOUNDARIES.md  MILESTONE11_BOUNDARIES.md  MILESTONE12_BOUNDARIES.md  MILESTONE13_BOUNDARIES.md  MILESTONE14_BOUNDARIES.md  MILESTONE15_BOUNDARIES.md  MILESTONE16_BOUNDARIES.md  MILESTONE17_BOUNDARIES.md  MILESTONE18_BOUNDARIES.md  MILESTONE19_BOUNDARIES.md  MILESTONE20_BOUNDARIES.md  MILESTONE21_BOUNDARIES.md  MILESTONE22_BOUNDARIES.md  MILESTONE23_BOUNDARIES.md  MILESTONE24_BOUNDARIES.md  MILESTONE25_BOUNDARIES.md  MILESTONE26_BOUNDARIES.md  MILESTONE27_BOUNDARIES.md  MILESTONE28_BOUNDARIES.md  MILESTONE2_BOUNDARIES.md  MILESTONE3_BOUNDARIES.md  MILESTONE4_BOUNDARIES.md  MILESTONE5_BOUNDARIES.md  MILESTONE6_BOUNDARIES.md  MILESTONE7_BOUNDARIES.md  MILESTONE8_BOUNDARIES.md  MILESTONE9_BOUNDARIES.md  README.md  env.source
cpp/apps/: CMakeLists.txt
cpp/apps/ava/: agent_config.cpp  agent_config.hpp  cli.cpp  cli.hpp  events.cpp  events.hpp  headless_run.cpp  headless_run.hpp  main.cpp  session_resolver.cpp  session_resolver.hpp  signal_cancel.cpp  signal_cancel.hpp
cpp/apps/ava_smoke/: main.cpp
cpp/apps/ava_tui/: interactive_action_adapter.cpp  interactive_action_adapter.hpp  interactive_detail_projection.cpp  interactive_detail_projection.hpp  main.cpp  options.cpp  options.hpp  state.cpp  state.hpp
cpp/cmake/: Dependencies.cmake  Sanitizers.cmake  ToolchainHygiene.cmake  Warnings.cmake
cpp/ncurses-tests/: CMakeLists.txt  linux00-initialization.cpp  linux01-screen-size.cpp  linux02-screen-resizing.cpp  linux03-panels.cpp  linux04-window.cpp  linux05-colors.cpp  linux06-wrapping.cpp
cpp/src/: CMakeLists.txt
cpp/src/agent/: message_queue.cpp  response.cpp  runtime.cpp  stuck_detector.cpp
cpp/src/config/: agents.cpp  config.cpp  credentials.cpp  model_registry.cpp  model_spec.cpp  paths.cpp  trust.cpp
cpp/src/control_plane/: commands.cpp  events.cpp  interactive.cpp  queue.cpp  sessions.cpp
cpp/src/llm/: circuit_breaker.cpp  factory.cpp  message_transform.cpp  pricing.cpp  provider.cpp  retry.cpp  shared_provider.cpp
cpp/src/mcp/: client.cpp  config.cpp  manager.cpp  message.cpp  transport.cpp
cpp/src/orchestration/: composition.cpp  interactive.cpp  run_controller.cpp  subagents.cpp  task.cpp
cpp/src/platform/: filesystem.cpp  platform.cpp
cpp/src/session/: session.cpp
cpp/src/tools/: command_classifier.cpp  core_tools.cpp  file_backup.cpp  mcp_bridge.cpp  output_fallback.cpp  path_guard.cpp  permission_middleware.cpp  registry.cpp  retry.cpp
cpp/src/types/: attachment.cpp  build_info.cpp  message.cpp  thinking.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/helpers/: mock_mcp_stdio_server.cpp
cpp/tests/integration/: headless_runtime_m10.test.cpp
cpp/tests/unit/: agent_runtime.test.cpp  ava_cli_headless.test.cpp  ava_tui_state.test.cpp  config_foundation.test.cpp  control_plane_contracts.test.cpp  llm_foundation.test.cpp  mcp_foundation.test.cpp  orchestration_foundation.test.cpp  platform_filesystem.test.cpp  session_foundation.test.cpp  tools_core_tools.test.cpp  tools_registry.test.cpp  types_smoke.test.cpp
crates/ava-acp/: Cargo.toml
crates/ava-acp/src/: claude.rs  factory.rs  lib.rs  mapper.rs  protocol.rs  provider.rs  server.rs  session_store.rs  stdio.rs  transport.rs
crates/ava-agent/: Cargo.toml
crates/ava-agent/benches/: reflection_hotpaths.rs
crates/ava-agent/src/: architect.rs  budget.rs  build_race.rs  cache_sharing.rs  continuation.rs  dream.rs  error_hints.rs  file_watcher.rs  hooks.rs  instruction_resolver.rs  instructions.rs  lib.rs  llm_trait.rs  loop.rs  memory_enrichment.rs  mentions.rs  message_queue.rs  reflection.rs  reviewer.rs  routing.rs  run_context.rs  scheduler.rs  session_agent.rs  session_logger.rs  stack.rs  startup_context.rs  streaming_diff.rs  stuck.rs  system_prompt.rs  trace.rs  trajectory.rs  turn_diff.rs
crates/ava-agent/tests/: agent_loop.rs  e2e_test.rs  reflection_loop.rs  stack_test.rs  trajectory.rs.disabled
crates/ava-auth/: Cargo.toml
crates/ava-auth/src/: browser.rs  callback.rs  config.rs  copilot.rs  device_code.rs  lib.rs  openai_headless.rs  pkce.rs  tokens.rs
crates/ava-cli-providers/: Cargo.toml
crates/ava-cli-providers/src/: bridge.rs  config.rs  configs.rs  discovery.rs  factory.rs  lib.rs  provider.rs  runner.rs
crates/ava-codebase/: Cargo.toml
crates/ava-codebase/src/: error.rs  graph.rs  impact.rs  indexer.rs  lib.rs  pagerank.rs  repomap.rs  search.rs  semantic.rs  symbol_graph.rs  symbols.rs  types.rs
crates/ava-commander/: Cargo.toml
crates/ava-commander/src/: events.rs  lib.rs  review.rs  workflow.rs
crates/ava-config/: Cargo.toml
crates/ava-context/: Cargo.toml
crates/ava-control-plane/: Cargo.toml
crates/ava-db/: Cargo.toml
crates/ava-extensions/: Cargo.toml
crates/ava-hq/: Cargo.toml
crates/ava-llm/: Cargo.toml
crates/ava-logger/: Cargo.toml
crates/ava-lsp/: Cargo.toml
crates/ava-mcp/: Cargo.toml
crates/ava-memory/: Cargo.toml
crates/ava-permissions/: Cargo.toml
crates/ava-platform/: Cargo.toml
crates/ava-plugin/: Cargo.toml
crates/ava-praxis/: Cargo.toml
crates/ava-review/: Cargo.toml
crates/ava-sandbox/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: app_state.rs  bridge.rs  events.rs  lib.rs  logging.rs  main.rs  pty.rs
(+2676 files in other folders)
