[workspace]
members = [
    "crates/ava-types",
    "crates/ava-platform",
    "crates/ava-config",
    "crates/ava-logger",
    "crates/ava-db",
    "crates/ava-tools",
    "crates/ava-memory",
    "crates/ava-permissions",
    "crates/ava-extensions",
    "crates/ava-validator",
    "crates/ava-agent",
    "crates/ava-codebase",
    "crates/ava-context",
    "crates/ava-lsp",
    "crates/ava-sandbox",
    "crates/ava-llm",
    "crates/ava-commander",
    "crates/ava-mcp",
    "crates/ava-session",
]
exclude = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["AVA Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5.0"
futures = "0.3"
tokio-stream = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }
tempfile = "3.0"
