[workspace]
members = [
    "crates/ava-types",
    "crates/ava-platform",
    "crates/ava-config",
    "crates/ava-db",
    "crates/ava-tools",
    "crates/ava-memory",
    "crates/ava-permissions",
    "crates/ava-extensions",
    "crates/ava-validator",
    "crates/ava-agent",
    "crates/ava-codebase",
    "crates/ava-context",
    "crates/ava-sandbox",
    "crates/ava-llm",
    "crates/ava-acp",
    "crates/ava-hq",
    "crates/ava-review",
    "crates/ava-auth",
    "crates/ava-mcp",
    "crates/ava-session",
    "crates/ava-plugin",
    "crates/ava-tui",
]
exclude = ["src-tauri"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
rust-version = "1.86"
authors = ["ASF Group"]
license = "MIT"
repository = "https://github.com/Artificial-Source/AVA"
homepage = "https://github.com/Artificial-Source/AVA"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dirs = "5.0"
futures = "0.3"
tokio-stream = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono", "uuid"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "rustls-tls"] }
tokio-util = { version = "0.7", features = ["rt"] }
regex = "1"
tempfile = "3.0"
toml = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
unsafe_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
dbg_macro = "deny"
undocumented_unsafe_blocks = "deny"
todo = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
manual_let_else = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
unnested_or_patterns = "warn"
vec_init_then_push = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_self_imports = "warn"
