[package]
name = "ava"
version = "2.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ava_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
regex = "1"
walkdir = "2"
globset = "0.4"
ava-tools = { path = "../crates/ava-tools" }
ava-db = { path = "../crates/ava-db" }
ava-memory = { path = "../crates/ava-memory" }
ava-permissions = { path = "../crates/ava-permissions" }
ava-extensions = { path = "../crates/ava-extensions" }
ava-validator = { path = "../crates/ava-validator" }
ava-agent = { path = "../crates/ava-agent" }
ava-commander = { path = "../crates/ava-commander" }
ava-llm = { path = "../crates/ava-llm" }
ava-mcp = { path = "../crates/ava-mcp" }
ava-session = { path = "../crates/ava-session" }
ava-codebase = { path = "../crates/ava-codebase" }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"

[dev-dependencies]
tempfile = "3"
