[package]
name = "ava-acp"
description = "Agent Client Protocol — Agent SDK integration and ACP transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
ava-llm = { path = "../ava-llm" }
ava-types = { path = "../ava-types" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-stream = "0.3"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
