[package]
name = "ava-acp"
description = "Agent Client Protocol — Agent SDK integration and ACP transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
ava-llm = { path = "../ava-llm" }
ava-types = { path = "../ava-types" }
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
async-stream = "0.3"
hex = "0.4"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
