[package]
name = "ava-agent"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
ava-context = { path = "../ava-context" }
ava-llm = { path = "../ava-llm" }
ava-tools = { path = "../ava-tools" }
ava-types = { path = "../ava-types" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "reflection_hotpaths"
harness = false
