[package]
name = "ava-agent"
description = "Core agent execution loop with tool calling and stuck detection"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-stream = "0.3"
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
ava-codebase = { path = "../ava-codebase" }
ava-context = { path = "../ava-context" }
ava-config = { path = "../ava-config" }
ava-llm = { path = "../ava-llm" }
ava-memory = { path = "../ava-memory" }
ava-platform = { path = "../ava-platform" }
ava-session = { path = "../ava-session" }
ava-mcp = { path = "../ava-mcp" }
ava-tools = { path = "../ava-tools" }
ava-types = { path = "../ava-types" }
dirs.workspace = true
glob = "0.3"
tracing.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
criterion = "0.5"
tempfile.workspace = true
ava-commander = { path = "../ava-commander" }

[[bench]]
name = "reflection_hotpaths"
harness = false
