[package]
name = "ava-cli-providers"
description = "External CLI agent integration and discovery"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
async-trait.workspace = true
ava-llm = { path = "../ava-llm" }
ava-types = { path = "../ava-types" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
