[package]
name = "ava-codebase"
description = "BM25 search index, dependency graph, and repository mapping"
version = "3.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tantivy = "0.22"
petgraph = "0.6"
tokio = { workspace = true, features = ["fs", "rt"] }
regex = "1"
tracing.workspace = true

[features]
default = []
semantic = []

[dev-dependencies]
tempfile.workspace = true
