[package]
name = "ava-commander"
version = "2.0.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
ava-agent = { path = "../ava-agent" }
ava-cli-providers = { path = "../ava-cli-providers", optional = true }
ava-context = { path = "../ava-context" }
ava-llm = { path = "../ava-llm" }
ava-tools = { path = "../ava-tools" }
ava-types = { path = "../ava-types" }
futures.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["rt"] }
uuid.workspace = true

[features]
default = []
cli-providers = ["dep:ava-cli-providers"]
