[package]
name = "ava-config"
description = "Configuration management and credential storage"
version = "2.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
dirs.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tracing.workspace = true
ava-types = { path = "../ava-types" }
ava-auth = { path = "../ava-auth" }

[dev-dependencies]
tempfile = "3.0"
